--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -4,9 +4,11 @@
     <!-- CSS only -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     <link href='https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&display=swap' rel='stylesheet' type='text/css'>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link href='https://css.gg/heart.css' rel='stylesheet' type='text/css'>
     <link href="./main.css" rel="stylesheet" type="text/css">
+    
     <!-- JavaScript Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
     <title>TinyGram</title>
@@ -45,6 +47,34 @@
         <div id="connection"></div>
       </div>
     </nav>
+    <div class="container centered" id="login" style="z-index: 9899;">
+        <div class="body d-md-flex align-items-center justify-content-between">
+            <div class="box-1 mt-md-0 mt-5">
+                <img src="https://images.pexels.com/photos/2033997/pexels-photo-2033997.jpeg?auto=compress&cs=tinysrgb&dpr=2&w=500"
+                    class="" alt="">
+            </div>
+            <div class=" box-2 d-flex flex-column h-100">
+                <div class="mt-5">
+                    <p class="mb-1 h-1">Connectez-vous !</p>
+                    <p class="text-muted mb-2">Partagez vos pensées avec vos amis.</p>
+                    <div class="d-flex flex-column ">
+                        <p class="text-muted mb-2">Connectez-vous avec...</p>
+                        <div class="g_id_signin" data-type="standard"></div>
+                        <div class="mt-3">
+                            <p class="mb-0 text-muted">Des millions d'utilisateurs vous attendent.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="mt-auto">
+                    <p class="footer text-muted mb-0 mt-md-0 mt-4">By register you agree with our
+                        <span class="p-color me-1">terms and conditions</span>and
+                        <span class="p-color ms-1">privacy policy</span>
+                    </p>
+                </div>
+            </div>
+            <span onclick="User.hideConnectView()" class="material-icons fas fa-times unselectable">close</span>
+        </div>
+    </div>
     <div id="main"></div>
   </body>
   <script>
