--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -8,7 +8,6 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link href='https://css.gg/heart.css' rel='stylesheet' type='text/css'>
     <link href="./main.css" rel="stylesheet" type="text/css">
-    
     <!-- JavaScript Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
     <title>TinyGram</title>
@@ -18,8 +17,6 @@
     <script src="https://unpkg.com/jwt-decode/build/jwt-decode.js"></script>
     <script src="https://accounts.google.com/gsi/client" async defer></script>
     <script src="js/notifications.js"></script>
-    
-
     <div id="g_id_onload" data-client_id="132580382677-ddhimn8b8ua6kcna8l0kmnp7a65u0icp.apps.googleusercontent.com" data-callback="connect"></div>
   </head>
   <body class="bg-light">
@@ -48,32 +45,28 @@
       </div>
     </nav>
     <div class="container centered" id="login" style="z-index: 9899;">
-        <div class="body d-md-flex align-items-center justify-content-between">
-            <div class="box-1 mt-md-0 mt-5">
-                <img src="https://images.pexels.com/photos/2033997/pexels-photo-2033997.jpeg?auto=compress&cs=tinysrgb&dpr=2&w=500"
-                    class="" alt="">
-            </div>
-            <div class=" box-2 d-flex flex-column h-100">
-                <div class="mt-5">
-                    <p class="mb-1 h-1">Connectez-vous !</p>
-                    <p class="text-muted mb-2">Partagez vos pensées avec vos amis.</p>
-                    <div class="d-flex flex-column ">
-                        <p class="text-muted mb-2">Connectez-vous avec...</p>
-                        <div class="g_id_signin" data-type="standard"></div>
-                        <div class="mt-3">
-                            <p class="mb-0 text-muted">Des millions d'utilisateurs vous attendent.</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="mt-auto">
-                    <p class="footer text-muted mb-0 mt-md-0 mt-4">By register you agree with our
-                        <span class="p-color me-1">terms and conditions</span>and
-                        <span class="p-color ms-1">privacy policy</span>
-                    </p>
-                </div>
-            </div>
-            <span onclick="User.hideConnectView()" class="material-icons fas fa-times unselectable">close</span>
+      <div class="body d-md-flex align-items-center justify-content-between">
+        <div class="box-1 mt-md-0 mt-5">
+          <img src="https://images.pexels.com/photos/2033997/pexels-photo-2033997.jpeg?auto=compress&cs=tinysrgb&dpr=2&w=500" class="" alt="">
         </div>
+        <div class=" box-2 d-flex flex-column h-100">
+          <div class="mt-5">
+            <p class="mb-1 h-1">Connectez-vous !</p>
+            <p class="text-muted mb-2">Partagez vos pensées avec vos amis.</p>
+            <div class="d-flex flex-column">
+              <div class="g_id_signin" data-type="standard"></div>
+              <div class="mt-3">
+                <p class="mb-0 text-muted">Des millions d'utilisateurs vous attendent.</p>
+              </div>
+            </div>
+          </div>
+          <div class="mt-auto">
+            <p class="footer text-muted mb-0 mt-md-0 mt-4">By register you agree with our <span class="p-color me-1">terms and conditions</span>and <span class="p-color ms-1">privacy policy</span>
+            </p>
+          </div>
+        </div>
+        <span onclick="User.hideConnectView()" class="material-icons fas fa-times unselectable">close</span>
+      </div>
     </div>
     <div id="main"></div>
   </body>
