--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -8,9 +8,12 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link href='https://css.gg/heart.css' rel='stylesheet' type='text/css'>
     <link href="./main.css" rel="stylesheet" type="text/css">
+
+    <link rel="icon" type="image/x-icon" href="./icon.ico">
+    <title>TinyGram</title>
+
     <!-- JavaScript Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
-    <title>TinyGram</title>
     <script src="https://unpkg.com/mithril/mithril.js"></script>
     <script src="https://code.jquery.com/jquery-3.6.1.slim.min.js" integrity="sha256-w8CvhFs7iHNVUtnSP0YKEg00p9Ih13rlL9zGqvLdePA=" crossorigin="anonymous"></script>
     <script src="js/main.js"></script>
