--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -30,17 +30,7 @@
       <div class="col-lg-2 offset-1">
         <a onClick="PostView.goTop()" class="navbar-brand text-dark unselectable" href="index.html" style="font-family: 'Dancing Script';font-size: 30;">TinyGram</a>
       </div>
-      <div class="col-lg-3  mw-25" id="Recherche">
-        <form class="form-inline mb-0">
-          <div class="input-group">
-            <div class="input-group-prepend">
-              <i class="input-group-text material-icons text-dark unselectable">search</i>
-            </div>
-            <input type="text" class="form-control" placeholder="Rechercher" aria-label="Rechercher" aria-describedby="basic-addon1">
-          </div>
-        </form>
-      </div>
-      <div class="col-lg-4 justify-content-center text-center d-flex">
+      <div class="offset-lg-3 col-lg-4 justify-content-center text-center d-flex">
         <button type="button" class="btn material-icons text-dark unselectable" onClick="MainView.changeView('welcome')">home</button>
         <button type="button" class="btn material-icons text-dark unselectable" onClick="NewPost.show()">add_box</button>
         <div id="connection"></div>
@@ -49,7 +39,7 @@
     <div class="container centered" id="login" style="z-index: 9899;">
       <div class="body d-md-flex align-items-center justify-content-between">
         <div class="box-1 mt-md-0 mt-5">
-          <img src="https://images.pexels.com/photos/2033997/pexels-photo-2033997.jpeg?auto=compress&cs=tinysrgb&dpr=2&w=500" class="" alt="">
+          <img src="img/imageAccueil.png">
         </div>
         <div class=" box-2 d-flex flex-column h-100">
           <div class="mt-5">
@@ -63,7 +53,7 @@
             </div>
           </div>
           <div class="mt-auto">
-            <p class="footer text-muted mb-0 mt-md-0 mt-4">By register you agree with our <span class="p-color me-1">terms and conditions</span>and <span class="p-color ms-1">privacy policy</span>
+            <p class="footer text-muted mb-0 mt-md-0 mt-4">By register you agree with our <span class="p-color me-1">terms and conditions</span>and<span class="p-color ms-1">privacy policy</span>
             </p>
           </div>
         </div>
