--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -39,7 +39,7 @@
     <div class="container centered" id="login" style="z-index: 9899;">
       <div class="body d-md-flex align-items-center justify-content-between">
         <div class="box-1 mt-md-0 mt-5">
-          <img src="img/imageAccueil.png">
+          <img src="https://images.pexels.com/photos/2033997/pexels-photo-2033997.jpeg?auto=compress&cs=tinysrgb&dpr=2&w=500">
         </div>
         <div class=" box-2 d-flex flex-column h-100">
           <div class="mt-5">
